- Cleaned up more views - Completed Venue profile view - Started Review System

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -36,8 +36,9 @@
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/register_card"
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="25dp"
+                android:paddingBottom="40dp"
                 android:layout_marginEnd="25dp"
                 app:cardCornerRadius="15dp"
                 app:cardElevation="4dp"
@@ -55,10 +56,7 @@
                         android:id="@+id/firstname_field"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="20sp"
                         android:layout_marginTop="20sp"
-                        android:layout_marginEnd="20sp"
-                        android:background="@drawable/edit_text_background"
                         app:boxStrokeWidth="0dp"
                         app:boxStrokeWidthFocused="0dp"
                         app:layout_constraintBottom_toTopOf="@+id/surname_field"
@@ -83,10 +81,7 @@
                         android:id="@+id/surname_field"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="20sp"
                         android:layout_marginTop="20sp"
-                        android:layout_marginEnd="20dp"
-                        android:background="@drawable/edit_text_background"
                         app:boxStrokeWidth="0dp"
                         app:boxStrokeWidthFocused="0dp"
                         app:layout_constraintBottom_toTopOf="@+id/email_field"
@@ -110,10 +105,7 @@
                         android:id="@+id/email_field"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="20sp"
                         android:layout_marginTop="20sp"
-                        android:layout_marginEnd="20sp"
-                        android:background="@drawable/edit_text_background"
                         app:boxStrokeWidth="0dp"
                         app:boxStrokeWidthFocused="0dp"
                         app:layout_constraintBottom_toTopOf="@+id/password_field"
@@ -137,10 +129,7 @@
                         android:id="@+id/password_field"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="20sp"
                         android:layout_marginTop="20sp"
-                        android:layout_marginEnd="20sp"
-                        android:background="@drawable/edit_text_background"
                         app:boxStrokeWidth="0dp"
                         app:boxStrokeWidthFocused="0dp"
                         app:layout_constraintBottom_toTopOf="@+id/user_type_radio_group"
@@ -205,7 +194,7 @@
                         android:layout_marginStart="25dp"
                         android:layout_marginTop="30dp"
                         android:layout_marginEnd="25dp"
-                        android:layout_marginBottom="10sp"
+                        android:layout_marginBottom="20dp"
                         android:background="@drawable/pill_button"
                         android:backgroundTint="@color/primary_pink"
                         android:onClick="@{()-> registerViewModel.onRegisterClick()}"
