--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -37,7 +37,7 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/login_card"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="25dp"
@@ -70,12 +70,10 @@
                     android:id="@+id/login_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20sp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="20sp"
-                    app:boxStrokeWidth="0dp"
                     app:boxStrokeWidthFocused="0dp"
-                    android:background="@drawable/edit_text_background"
+                    app:boxStrokeWidth="0dp"
+                    android:background="@color/transparent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/login_txt"
@@ -95,12 +93,9 @@
                     android:id="@+id/password_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20sp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginEnd="20sp"
                     app:boxStrokeWidth="0dp"
                     app:boxStrokeWidthFocused="0dp"
-                    android:background="@drawable/edit_text_background"
                     android:layout_marginBottom="25dp"
                     app:layout_constraintBottom_toTopOf="@+id/login_btn"
                     app:layout_constraintEnd_toEndOf="parent"
